--- a/Bolin_admin/view/index/css/indexs.less
+++ b/Bolin_admin/view/index/css/indexs.less
@@ -156,12 +156,13 @@ h4 {
       text-align: center;
       .y-item {
         padding: 20px 0;
+        width: 12.5%;
         span.y-span {
           display: inline-block;
-          width: 160px;
-          height: 160px;
-          border-radius: 50%;
-          line-height: 170px;
+          width: 110px;
+          height: 110px;
+          border-radius: 110px;
+          line-height: 120px;
           background: #009688;
           i {
             color: #fff;
@@ -176,7 +177,7 @@ h4 {
           font-size: 18px;
           border-bottom: 1px solid #999;
           padding-bottom: 15px;
-          width: 200px;
+          width: 88%;
           margin: 0 auto;
         }
       }
