--- a/Bolin_admin/view/login/css/style.css
+++ b/Bolin_admin/view/login/css/style.css
@@ -49,7 +49,7 @@ canvas {
   width: 100%;
   height: 100%;
   position: relative;
-  background-image: url(../img/bg.jpg);
+  background-image: url(../../../img/bg.jpg);
   background-position: 50% 50%;
   background-size: cover;
   background-repeat: no-repeat;
