--- a/home/css/index.less
+++ b/home/css/index.less
@@ -25,6 +25,7 @@ html,body{
   padding: 0;
   background: #fff;
   font-family: '微软雅黑';
+  color: #222;
 }
 // clearfix
 .clearfix:after{
@@ -405,18 +406,112 @@ img,span,a,i,b,input,select,textarea{
   .section3{
     background: #f3f3f3;
     height: 757px;
+    text-align: center;
+    h2{
+      width: 874px;
+      margin:0 auto ;
+      padding-top: 61px;
+      font-size: 50px;
+      line-height: 52px;
+      padding-bottom: 23px;
+      border-bottom: 1px solid #222;
+      span.r{
+        color: #ff0000;
+      }
+    }
+    p{
+     font-size: 18px;
+     color: #666;
+     line-height: 52px;
+    }
+    .box{
+      height: 460px;
+      margin-top: 50px;
+      >div{
+        width: 224px;
+        height: 458px;
+        background-color: #ffffff;
+        border: solid 1px #0972d4;
+        margin-right: 20px;
+        float: left;
+        padding-left: 10px;
+        padding-right: 10px;
+        img{
+          margin-top: 18px;
+          width: 102px;
+        }
+        h3{
+          font-size: 24px;
+          color: #ef0000;
+          margin-top: 17px;
+        }
+        p{
+          line-height: 25px;
+          text-align: left;
+          font-size: 12px;
+          width: 182px;
+          height: 196px;
+          margin: 0 auto;
+          margin-top: 16px;
+        }
+        .btn{
+          margin-top: 10px;
+          a{
+            display: inline-block;
+            width: 106px;
+            height: 44px;
+            line-height: 44px;
+            background-color: #ffffff;
+            border-radius: 5px;
+            border: solid 1px #fba746;
+            font-size: 16px;
+            color: #fba746;
+            &:hover{
+              background: #fba746;
+              color: #fff;
+            }
+          }
+        }
+      }
+    }
   }
   // 第四屏
   .section4{
-    
+    text-align: center;
+    height: 882px;
+    h2{
+      font-size: 50px;
+      padding: 80px 0;
+    }
   }
   // 第五屏
   .section5{
+    text-align: center;
+    background: #f9f9f9;
+    height: 936px; 
     
   }
   // 第六屏
   .section6{
-    
+    height: 551px;
+    background: #fff;
+    text-align: center;
+    h2{
+      width: 900px;
+      font-size: 50px;
+      padding-bottom: 20px;
+      border-bottom:1px solid #222; 
+      margin: 0 auto;
+      padding-top: 80px;
+    }
+    p{
+      font-size: 18px;
+      line-height: 52px;
+      color: #666;
+    }
+    .box{
+      
+    }
   }
   // 第七屏
   .section7{
